--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -72,10 +72,11 @@
 
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return;
+    // console.log(this)
     this.classList.remove('playing');
   }
 
-  const keys = document.querySelectorAll('.key');
+  const keys = document.querySelectorAll('.key'); //creating variable to locate all keys
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
   window.addEventListener('keydown', playSound);
