--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -72,7 +72,7 @@
 
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return;
-    // console.log(this)
+    console.log(this)
     this.classList.remove('playing');
   }
 
