--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,6 +22,21 @@
 
   <style>
 
+   :root{
+      --base: yellow;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+
+    img{
+      padding: var(--spacing);
+      background-color: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl{
+      color: var(--base);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -30,7 +45,7 @@
       text-align: center;
       background: #193549;
       color: white;
-      font-family: 'helvetica neue', sans-serif;
+       font-family: 'helvetica neue', sans-serif;
       font-weight: 100;
       font-size: 50px;
     }
@@ -43,8 +58,28 @@
       width: 100px;
     }
   </style>
-
+ 
   <script>
+    let inputs = document.querySelectorAll('div input')
+      
+    function updateInputs(){
+      let suffix = this.dataset.sizing || '';
+      // debugger
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+      // console.log(this)
+      // console.log(`${--this.name}`)
+      // console.log(--this.name)
+      // console.log(suffix)
+      //update the variable 
+    }
+
+    inputs.forEach(input => input.addEventListener('change', updateInputs))
+    inputs.forEach(input => input.addEventListener('mousemove', updateInputs))
+
+
+
+    
+    //once you get the change value youre going to update the css variable's value
   </script>
 
 </body>
