--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -23,7 +23,7 @@
   <style>
 
    :root{
-      --base: yellow;
+      --base: rgb(252, 252, 252);
       --spacing: 10px;
       --blur: 10px;
     }
